add and fix API documentation
